Fix navbar overlap issues

--- a/code-i-fantasy-football/css/style.css
+++ b/code-i-fantasy-football/css/style.css
@@ -50,6 +50,10 @@ body {
     margin-top: 5em;
 }
 
+nav span {
+    margin-left: 15px;
+}
+
 .icon-text {
     margin-left: 1.5em;
     font-weight: 500;
@@ -102,4 +106,28 @@ p.desc {
 
 .box-a {
     order: 2; /* Go down, bring Box B up */
+}
+
+@media (max-width: 900px) {
+    div.navbar-fixed a {
+        font-size: .75em;
+    }
+    
+    div.navbar-fixed span {
+        font-size: .7em;
+        margin: 0 1.5em;
+        min-width: 600px;
+    }
+    
+    nav span {
+        display: inline-block;
+        min-width: 300px;
+        text-align: center;
+    }
+    
+    nav {
+        display: inline-block;
+        min-width: 400px;
+    }
+
 }
